vlib/v/parser/tests/for_in_mut_key.vv
fn main() {
	mut m := {'foo': 1, 'bar': 2}
	for mut i, _ in m {
		println(i)
	}
	println(m)
}
